<resources>
    <string name="app_name">Fit_Connect</string>
    <string name="set_number">%d</string>
    <string name="weight_reps_format">%.1flbs × %d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="current_weekly_streak">Current Weekly Streak</string>
    <string name="weekly_streak_description">Track your fitness today to get another streak</string>
    <string name="your_activity">Your Activity</string>
    <string name="fit_group_track">Fit Group Track</string>
    <string name="recent">Recent</string>
    <string name="pr_s_history">PR\'s History</string>
    <string name="following">Following</string>
    <string name="testing_text_routine">Testing text routine</string>
    <string name="testing_routine_part">Testing routine part</string>
    <string name="testing_following">Testing Following</string>
    <string name="testing_prhistory">Testing prhistory</string>
    <string name="leg_day">Leg Day</string>
    <string name="time">Time</string>
    <string name="time_colon">Time:</string>
    <string name="duration_colon">Duration:</string>
    <string name="volume">Volume</string>
    <string name="workout">Workout</string>
    <string name="_0_likes">0 likes</string>
    <string name="_0_comments">0 comments</string>
    <string name="like">LIKE</string>
    <string name="add_a_comment">Add a comment .......</string>
    <string name="post">Post</string>
    <string-array name="home_dropdown_options">
        <item>HOME</item>
        <item>FOLLOWING</item>
        <item>PR HISTORY</item>
    </string-array>
    <string name="Profile">Profile</string>
    <string name="Workout">Workout</string>
    <string name="fit_connect">Fit Connect</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="type_password_here">Type Password Here</string>
    <string name="type_username_here">Type Username Here</string>
    <string name="close">Close</string>
    <string name="create_account">Create Account</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="search_up_name">Search up name</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="find_followers">Find Followers</string>
    <string name="unfollow">Unfollow</string>
    <string name="good_work_track_your_efforts_tomorrow_to_keep_the_streak">Good Work! Track Your Efforts Tomorrow to Keep the Streak!!</string>
    <string name="last_workout">Latest Workout</string>
</resources>