<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment_navigation"
    app:startDestination="@+id/nav_nested_home">

    <fragment
        android:id="@+id/nav_nested_home"
        android:name="com.example.fit_connect.ui.home.nested_fragments.NestedHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_nested_home"/>

    <fragment
        android:id="@+id/nav_nested_following"
        android:name="com.example.fit_connect.ui.home.nested_fragments.NestedFollowingFragment"
        android:label="@string/following"
        tools:layout="@layout/fragment_nested_following"/>

    <fragment
        android:id="@+id/nav_nested_prhistory"
        android:name="com.example.fit_connect.ui.home.nested_fragments.NestedPRHistoryFragment"
        android:label="@string/pr_s_history"
        tools:layout="@layout/fragment_nested_prhistory"/>

</navigation>