<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fit_connect"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="?attr/actionBarSize"/>


        <ImageView
            android:id="@+id/login_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_below="@id/login_title_txt"
            android:layout_marginTop="56dp"
            android:background="#000000"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/bicep" />

        <EditText
            android:id="@+id/login_username_edittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_below="@id/login_image"
            android:layout_marginTop="48dp"
            android:background="@drawable/ic_rounded_background"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/login_password_edittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username_edittxt"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            android:background="@drawable/ic_rounded_background"
            android:paddingLeft="20dp"/>

        <LinearLayout
            android:id="@+id/login_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_edittxt"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingLeft="64dp"
            android:paddingRight="64dp">

            <Button
                android:id="@+id/close_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textSize="24dp"
                android:textStyle="bold"
                app:cornerRadius="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/login_login_btn"
                android:text="@string/login"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:text="@string/create_account"
            android:layout_below="@+id/login_button_layout"
            android:textSize="24dp"
            android:backgroundTint="#00CED1"
            android:textColor="#FFFFFF"
            />



    </RelativeLayout>
</ScrollView>
