<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Layout for Profile -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">
        <ImageView
            android:id="@+id/following_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
             />

        <TextView
            android:id="@+id/following_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <TextView
            android:text="@string/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00CED1"
            android:layout_gravity="right"
            android:paddingRight="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/workout_day_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leg_day"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        />

    <!-- Layout for Time Volume Records -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/following_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp">
            <TextView
                android:text="@string/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/following_volume_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp">
            <TextView
                android:text="Records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/following_records_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"/>

        </LinearLayout>


    </LinearLayout>

    <!-- Line Spacing -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:background="#000000"
        android:layout_margin="8dp"
        />
    <!-- Workout List -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"/>

    <ListView
        android:id="@+id/following_workout_listview"
        android:layout_height="220dp"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:divider="@android:color/transparent"/>

    <!--Likes and Comments-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_likes_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_likes"
            android:paddingLeft="30dp"/>

        <!--Move Comments to the right end-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/number_comments_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_comments"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <!-- Like and Comment Img-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/like_imgbtn"
            android:src="@drawable/ic_thumb_up_off"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/like"
            />


        <ImageButton
            android:id="@+id/comment_imgbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_chat_bubble"
            android:background="#FFFFFF"
            android:contentDescription="COMMENT"/>

    </LinearLayout>


    <!-- Last Comment -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/following_comment_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            />

        <TextView
            android:id="@+id/following_comment_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            />

    </LinearLayout>

    <!-- Seperator -->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/following_toolbar_seperator"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:paddingTop="15dp"/>


</LinearLayout>