<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#333333"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/find_follower_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_arrow_back"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/find_followers"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>



    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Search Layout -->
            <LinearLayout
                android:id="@+id/find_follower_search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/find_follower_search_edit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rounded_background"
                    android:hint="@string/search_up_name"
                    android:paddingLeft="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/find_follower_search_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"/>


            </LinearLayout>

            <!-- User Find Layout -->
            <ImageView
                android:id="@+id/find_follower_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@id/find_follower_search_layout"
                android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/find_follower_username_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/find_follower_search_layout"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:layout_toRightOf="@id/find_follower_image"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="24dp"/>

            <TextView
                android:id="@+id/find_Follower_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/find_follower_image"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:layout_below="@id/find_follower_username_txt"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"/>

            <!-- Follow / Unfollow Btn -->
            <Button
                android:id="@+id/find_follower_follow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow"
                android:layout_below="@id/find_follower_image"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>



</LinearLayout>