<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">


    <!-- Weekly Streak -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ui.home.nested_fragments.NestedHomeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weekly_streak_txt"
            android:text = "@string/current_weekly_streak"
            android:textColor="#00CED1"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/weekly_streak_des_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_streak_description"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"/>

        <!-- Fire Images -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <!-- Weekly Fire Images -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/weekly_fire_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/weekly_fire_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>

            </LinearLayout>
            <!--Daily Fire Images -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/daily_fire_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/daily_fire_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:id="@+id/weekly_streak_layout"
            android:paddingBottom="15dp"/>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/toolbar_seperator"
            android:background="#333333"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:paddingTop="15dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/your_activity_txt"
                android:text="@string/your_activity"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textColor="#00CED1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:text="You"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000FF"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                />
            <TextView
                android:id="@+id/friend1_legend_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#FF0000"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"/>

            <TextView
                android:id="@+id/friend2_legend_txt"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"/>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fit_group_track_txt"
            android:text="@string/fit_group_track"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"/>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/activity_chart_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center" />

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/toolbar_seperator2"
            android:background="#333333"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:paddingTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prs_txt"
            android:text="PR's"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:textColor="#00CED1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pr_recent_txt"
            android:text="@string/recent"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"/>

        <ListView
            android:id="@+id/pr_recent_list"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:paddingLeft="20dp"
            android:divider="@drawable/white_divider"
            android:paddingRight="20dp"
            />

    </LinearLayout>
</ScrollView>